# papers-vibe-reading

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  todo.md
.github/workflows/: daily_papers.yml
src/: analyzer.py  assets.py  config.py  fetcher.py  main.py  metadata.py  notifier.py  paper_reader.py  reporter.py  visualizer.py
templates/: email_template.html  index.html  paper.html  summary.html
