[project]
name = "papers-vibe-reading"
version = "0.1.0"
description = "每日自动获取 HuggingFace 热门 AI 论文，通过 Gemini 进行深度 Vibe Reading 分析"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[tool.uv]
dev-dependencies = []
